made cleaned csv

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 155,
    "id": "66addae4",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 156,
    "id": "d94237fe",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 157,
    "id": "7895c0b2",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 158,
    "id": "deca641f",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 159,
    "id": "8df50a13",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 160,
    "id": "92f8aebe",
    "metadata": {},
    "outputs": [
@@ -653,7 +653,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 161,
    "id": "677aad11",
    "metadata": {},
    "outputs": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 162,
    "id": "6948becc",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 163,
    "id": "4647bdd5",
    "metadata": {},
    "outputs": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 164,
    "id": "ab856e94",
    "metadata": {},
    "outputs": [],
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 165,
    "id": "21b53d60",
    "metadata": {},
    "outputs": [
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 166,
    "id": "f921199a",
    "metadata": {},
    "outputs": [
@@ -945,7 +945,7 @@
        "\" \\nWe were a little confused about why Climate Zone and Farm ID weren't matched for how\\nwell it can be used to predict the Feed_Quantity_kg so we decided to calculate all\\npairwise correlations. \\n\""
       ]
      },
-     "execution_count": 141,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 167,
    "id": "00573b1a",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 168,
    "id": "86ac1a65",
    "metadata": {},
    "outputs": [
@@ -2252,7 +2252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 169,
    "id": "4c843436",
    "metadata": {},
    "outputs": [
@@ -2269,7 +2269,7 @@
        "\" \\nAfter getting all the pairwise correlations, we've seen that the maximum correlation\\nbetween two pairs is around 30%, so nothing too much of note we've determined.\\n\""
       ]
      },
-     "execution_count": 144,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2299,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "id": "8aa0209e",
    "metadata": {},
    "outputs": [
@@ -2534,7 +2534,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2565,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "id": "9062849e",
    "metadata": {},
    "outputs": [
@@ -2602,6 +2602,16 @@
       "Milk_Yield_L              15.595179    5.343345    0.055212   44.555285\n",
       "Saved to numerical_feature_summary.csv\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\" \\nFrom this, we manually looked through and determined most of the min and max's were\\npretty possible so we will keep this.\\n\""
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2624,11 +2634,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "id": "fd32e464",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved cleaned_train.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "train.to_csv(\"cleaned_train.csv\", index=False)\n",
+    "print(\"Saved cleaned_train.csv\")"
+   ]
   },
   {
    "cell_type": "code",
