--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "id": "79dbf60a",
    "metadata": {},
    "outputs": [],
@@ -1634,7 +1634,7 @@
     "# APPLY SAME CLEANING TO TEST\n",
     "# ------------------------------\n",
     "\n",
-    "test = test.copy()\n",
+    "test = pd.read_csv(TEST_PATH)\n",
     "\n",
     "# 1) REMOVE NEGATIVES WHERE THEY ARE INVALID\n",
     "non_negative_cols = [\n",
@@ -1759,9 +1759,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (myenv)",
    "language": "python",
-   "name": "python3"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1773,7 +1773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
