--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -5,19 +5,22 @@
    "id": "c0e4071e",
    "metadata": {},
    "source": [
-    "# Modeling\n",
+    "# Preliminary Modeling\n",
     "\n",
     "This notebook implements nested cross-validation for multiple models to predict milk yield.\n",
-    "Models are run in order from fastest to slowest:\n",
-    "1. Decision Trees (fastest)\n",
+    "The following models were run:\n",
+    "1. Decision Trees\n",
     "2. Random Forests\n",
     "3. XGBoost\n",
     "4. K-Nearest Neighbors (KNN)\n",
     "5. Neural Networks\n",
-    "6. Support Vector Machine (SVM) Regressor (slowest)\n",
+    "6. Support Vector Machine (SVM) Regressor\n",
     "\n",
-    "We'll use nested CV to find optimal hyperparameters and create an ensemble of the top 3 models.\n",
-    "All models (including CV fold models) are saved in the models folder."
+    "We'll use nested CV to find optimal hyperparameters.\n",
+    "\n",
+    "The goal of this notebook was to find which models were good enough to continue and finetune, and which we shouldn't continue experimenting with, as well as to provide preliminary baseline hyperparameters for these models. The reason these models are preliminary is because we only ran the models on 75,000/210,000 datapoints of the datasets, to provide roughly how accurate each model would be, as the nested CV would take too long if ran on entire dataset.\n",
+    "\n",
+    "Once we figure out which models were good, we would finetune those.\n"
    ]
   },
   {
@@ -63,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c699f6b0",
    "metadata": {},
    "outputs": [
@@ -83,8 +86,10 @@
     "# TRAIN_PATH = \"cattle_data_cleaned_train.csv\"\n",
     "# TEST_PATH = \"cattle_data_cleaned_test.csv\"\n",
     "\n",
-    "TRAIN_PATH = \"cleaned_train.csv\"\n",
-    "TEST_PATH = \"cleaned_test.csv\"\n",
+    "# cleaned train and test (nn), which is the data w/ cleaned, normalized, and categorically encoded features from data_preperation.ipynb\n",
+    "\n",
+    "TRAIN_PATH = \"cleaned_train_nn.csv\"\n",
+    "TEST_PATH = \"cleaned_test_nn.csv\"\n",
     "\n",
     "train = pd.read_csv(TRAIN_PATH)\n",
     "test = pd.read_csv(TEST_PATH)\n",
@@ -95,8 +100,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "579a7a34",
+   "metadata": {},
+   "source": [
+    "It was pretty important to make sure to drop the ID columns during this step, as it would've caused OHC to explode in dimensionality and add lots of noise to our model training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cd16c66e",
    "metadata": {},
    "outputs": [
@@ -111,8 +124,7 @@
     }
    ],
    "source": [
-    "# Separate features and target\n",
-    "# Assuming target column is 'Milk_Yield_L' and ID columns should be excluded\n",
+    "# Target column is 'Milk_Yield_L', ID columns should be excluded\n",
     "id_cols = ['Cattle_ID'] if 'Cattle_ID' in train.columns else []\n",
     "target_col = 'Milk_Yield_L'\n",
     "\n",
@@ -158,12 +170,12 @@
    "source": [
     "## Nested Cross-Validation Setup\n",
     "\n",
-    "We'll use 5-fold outer CV and 3-fold inner CV for hyperparameter tuning.\n"
+    "We'll use 5-fold outer CV and 3-fold inner CV for hyperparameter tuning. We also set the sample size to only use 75k to hyperparameter tune and provide rough accuracies.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a0875fbb",
    "metadata": {},
    "outputs": [
@@ -184,7 +196,7 @@
     "\n",
     "# Use subset of data for CV evaluation to speed up (set to None to use full data)\n",
     "# For 210k data points, using 50k-100k is usually sufficient for hyperparameter tuning\n",
-    "CV_SAMPLE_SIZE = 75000  # Use 50k samples for CV evaluation\n",
+    "CV_SAMPLE_SIZE = 75000  # Use 75k samples for CV evaluation\n",
     "\n",
     "outer_cv = KFold(n_splits=OUTER_CV, shuffle=True, random_state=42)\n",
     "inner_cv = KFold(n_splits=INNER_CV, shuffle=True, random_state=42)\n",
@@ -202,7 +214,10 @@
    "id": "5b8e2053",
    "metadata": {},
    "source": [
-    "## Preprocessing Pipeline\n"
+    "## Preprocessing Pipeline\n",
+    "\n",
+    "- For scaling models, preprocessor imputes and scales (although this is already done in data_preperation, was added as a safety when initially training on non processed data).\n",
+    "- For tree based models, it just imputes (although in reality this never ends up happening, as missing data is already handled)."
    ]
   },
   {
@@ -259,12 +274,14 @@
    "id": "35d44373",
    "metadata": {},
    "source": [
-    "## Model Definitions and Hyperparameter Grids\n"
+    "## Model Definitions and Hyperparameter Grids\n",
+    "\n",
+    "These were hyperparameter grids we ended up deciding on. Again, these are rough and were intended just to gather some overarching data on which models could understand the data best, and after we picked those models, we would fine tune them and ensemble them later/in other notebooks.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b0ae0959",
    "metadata": {},
    "outputs": [
@@ -278,7 +295,6 @@
    ],
    "source": [
     "# Define models and their hyperparameter grids\n",
-    "# Ordered from fastest to slowest for 210k data points\n",
     "models_config = {\n",
     "    'DecisionTree': {\n",
     "        'pipeline': Pipeline([\n",
@@ -363,7 +379,11 @@
    "id": "327b86c7",
    "metadata": {},
    "source": [
-    "## Nested Cross-Validation Function\n"
+    "## Nested Cross-Validation Function\n",
+    "\n",
+    "In order to find the best hyperparameteres, we decided to use a nested cross validation (as we learned in class), but with only three inner folds to speed it up. We then picked models who had the best average accuracy on the outer folds (which represented models w/ best hyperparams within that fold). This would be a fair comparison between models within the 75k subset of data and would hopefully be enough to provide us w/ reasonable rankings.\n",
+    "\n",
+    "The evaluation metric was RMSE"
    ]
   },
   {
@@ -995,238 +1015,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfd12425",
+   "id": "42a5caa9",
    "metadata": {},
    "source": [
-    "## Select Top 3 Models and Create Ensemble\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c65de1db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get top 3 models based on RMSE\n",
-    "top_3_models = comparison_df.head(3)['Model'].tolist()\n",
-    "print(f\"Top 3 models selected: {top_3_models}\")\n",
+    "## Results\n",
     "\n",
-    "# Get the most common best parameters for each top model\n",
-    "def get_most_common_params(best_params_list):\n",
-    "    \"\"\"Get the most common parameter values across folds\"\"\"\n",
-    "    if not best_params_list:\n",
-    "        return {}\n",
-    "    \n",
-    "    param_counts = {}\n",
-    "    for params in best_params_list:\n",
-    "        for key, value in params.items():\n",
-    "            if key not in param_counts:\n",
-    "                param_counts[key] = {}\n",
-    "            if value not in param_counts[key]:\n",
-    "                param_counts[key][value] = 0\n",
-    "            param_counts[key][value] += 1\n",
-    "    \n",
-    "    most_common = {}\n",
-    "    for key, value_counts in param_counts.items():\n",
-    "        most_common[key] = max(value_counts, key=value_counts.get)\n",
-    "    \n",
-    "    return most_common\n",
+    "- XGBoost: Average RMSE: 4.2241 (±0.0333)\n",
+    "- Neural Net: Average RMSE: 4.2325 (±0.0335)\n",
+    "- Random Forests: Average RMSE: 4.4843 (±0.0323)\n",
+    "- Decision Trees: Average RMSE: 4.6067 (±0.0352)\n",
+    "- KNN: Average RMSE: 4.6611 (±0.0219)\n",
+    "- SVM: Did not finish, took > 9 hours for a singular fold to train so we ended this run early\n",
     "\n",
-    "# Build final models with best hyperparameters\n",
-    "final_models = {}\n",
-    "for model_name in top_3_models:\n",
-    "    config = models_config[model_name]\n",
-    "    best_params = get_most_common_params(results[model_name]['best_params'])\n",
-    "    \n",
-    "    # Create final pipeline with best parameters\n",
-    "    final_pipeline = Pipeline([\n",
-    "        ('preprocessor', config['pipeline'].named_steps['preprocessor']),\n",
-    "        ('model', config['pipeline'].named_steps['model'])\n",
-    "    ])\n",
-    "    \n",
-    "    # Set best parameters\n",
-    "    final_pipeline.set_params(**best_params)\n",
-    "    \n",
-    "    print(f\"\\n{model_name} final parameters: {best_params}\")\n",
-    "    final_models[model_name] = final_pipeline\n",
-    "\n",
-    "print(f\"\\nFinal models created: {list(final_models.keys())}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f1c4955",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train final models on full training data\n",
-    "print(\"\\nTraining final models on full training set...\")\n",
-    "for model_name, model in final_models.items():\n",
-    "    print(f\"Training {model_name}...\")\n",
-    "    start_time = time.time()\n",
-    "    model.fit(X_train, y_train)\n",
-    "    fit_time = time.time() - start_time\n",
-    "    print(f\"  Completed in {fit_time:.2f}s\")\n",
-    "\n",
-    "print(\"\\nAll models trained successfully!\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1f79b78a",
-   "metadata": {},
-   "source": [
-    "## Create Ensemble Model\n",
-    "\n",
-    "We'll use a VotingRegressor (averaging predictions) for the ensemble.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e70091c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create ensemble using VotingRegressor\n",
-    "# Note: VotingRegressor needs estimators, but we have pipelines\n",
-    "# We'll create a wrapper or use the models directly\n",
-    "\n",
-    "# For ensemble, we need to use the base estimators\n",
-    "# Let's create an ensemble that averages predictions from the three models\n",
-    "\n",
-    "class EnsembleModel:\n",
-    "    \"\"\"Wrapper class to ensemble multiple pipeline models\"\"\"\n",
-    "    def __init__(self, models):\n",
-    "        self.models = models\n",
-    "    \n",
-    "    def fit(self, X, y):\n",
-    "        for name, model in self.models.items():\n",
-    "            model.fit(X, y)\n",
-    "        return self\n",
-    "    \n",
-    "    def predict(self, X):\n",
-    "        predictions = []\n",
-    "        for name, model in self.models.items():\n",
-    "            pred = model.predict(X)\n",
-    "            predictions.append(pred)\n",
-    "        # Average predictions\n",
-    "        return np.mean(predictions, axis=0)\n",
-    "\n",
-    "# Create ensemble\n",
-    "ensemble = EnsembleModel(final_models)\n",
-    "ensemble.fit(X_train, y_train)\n",
-    "\n",
-    "print(\"Ensemble model created and trained!\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fef552f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Evaluate ensemble on training data (for reference)\n",
-    "y_train_pred_ensemble = ensemble.predict(X_train)\n",
-    "ensemble_train_rmse = np.sqrt(mean_squared_error(y_train, y_train_pred_ensemble))\n",
-    "ensemble_train_mae = mean_absolute_error(y_train, y_train_pred_ensemble)\n",
-    "ensemble_train_r2 = r2_score(y_train, y_train_pred_ensemble)\n",
-    "\n",
-    "print(f\"\\nEnsemble Performance on Training Data:\")\n",
-    "print(f\"  RMSE: {ensemble_train_rmse:.4f}\")\n",
-    "print(f\"  MAE: {ensemble_train_mae:.4f}\")\n",
-    "print(f\"  R²: {ensemble_train_r2:.4f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "85a79e7d",
-   "metadata": {},
-   "source": [
-    "## Inference: Generate Predictions for Test Data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92833d49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate predictions on test data\n",
-    "print(\"Generating predictions on test data...\")\n",
-    "test_predictions = ensemble.predict(X_test)\n",
-    "\n",
-    "print(f\"Predictions shape: {test_predictions.shape}\")\n",
-    "print(f\"Predictions range: [{test_predictions.min():.2f}, {test_predictions.max():.2f}]\")\n",
-    "print(f\"Predictions mean: {test_predictions.mean():.2f}\")\n",
-    "print(f\"Predictions std: {test_predictions.std():.2f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1507e15a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create submission file\n",
-    "# Get Cattle_ID from test data\n",
-    "if 'Cattle_ID' in test.columns:\n",
-    "    submission = pd.DataFrame({\n",
-    "        'Cattle_ID': test['Cattle_ID'],\n",
-    "        'Milk_Yield_L': test_predictions\n",
-    "    })\n",
-    "else:\n",
-    "    # If no Cattle_ID, create sequential IDs\n",
-    "    submission = pd.DataFrame({\n",
-    "        'Cattle_ID': range(1, len(test_predictions) + 1),\n",
-    "        'Milk_Yield_L': test_predictions\n",
-    "    })\n",
-    "\n",
-    "# Save submission\n",
-    "submission_path = 'submission.csv'\n",
-    "submission.to_csv(submission_path, index=False)\n",
-    "print(f\"\\nSubmission file saved to: {submission_path}\")\n",
-    "print(f\"Submission shape: {submission.shape}\")\n",
-    "print(\"\\nFirst few predictions:\")\n",
-    "print(submission.head(10))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9b9bd48c",
-   "metadata": {},
-   "source": [
-    "## Save Models (Optional)\n",
-    "\n",
-    "Save the trained models for future use.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d719f980",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save individual final models and ensemble\n",
-    "# Note: CV fold models are already saved during nested_cv_evaluation\n",
-    "\n",
-    "for model_name, model in final_models.items():\n",
-    "    model_path = f'models/{model_name.lower()}_final.pkl'\n",
-    "    joblib.dump(model, model_path)\n",
-    "    print(f\"Saved {model_name} final model to {model_path}\")\n",
-    "\n",
-    "ensemble_path = 'models/ensemble_model.pkl'\n",
-    "joblib.dump(ensemble, ensemble_path)\n",
-    "print(f\"Saved ensemble to {ensemble_path}\")\n",
-    "\n",
-    "print(\"\\nAll final models saved successfully!\")\n",
-    "print(\"Note: Cross-validation fold models were saved during CV evaluation.\")\n"
+    "Therefore, we choose to explore boosting models (xgboost and catboost), as well as neural network models more closely, as there was significant drop off in performance after those models."
    ]
   }
  ],
