--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -10,8 +10,18 @@
     "This notebook implements nested 5-fold cross-validation for XGBoost to predict milk yield.\n",
     "- Uses nested CV (5-fold outer, 3-fold inner)\n",
     "- Uses entire dataset (no sampling)\n",
-    "- Expanded hyperparameter grid: n_estimators 200-500, max_depth 3-21\n",
-    "- Saves models to models_xgb folder\n"
+    "- Expanded hyperparameter grid: n_estimators 200-400, max_depth 3-21 (then more precise during further runs)\n",
+    "- Saves models to models_xgb folder\n",
+    "\n",
+    "\n",
+    "This code is very similar to modeling.ipynb, but it was specificaly for xgboost model. Steps all the way until model_creation is nearly identical. \n",
+    "\n",
+    "The differences are\n",
+    "- larger parameter grid, now centered around teh optimal parameteres from preliminary testing\n",
+    "- trains and cross validates on entire 210k dataset\n",
+    "- provides inference for test data and produces an output submission.csv\n",
+    "\n",
+    "Since XGBoost trains much faster than comparable models, it was easier to have a larger grid and more finer tuned parameters"
    ]
   },
   {
@@ -583,17 +593,9 @@
    "id": "07f08cf2",
    "metadata": {},
    "source": [
-    "## Retrain on Entire Dataset with Best Parameters\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "f06eb81b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# best_params_final = {'model__colsample_bytree': 0.8, 'model__learning_rate': 0.2, 'model__max_depth': 3, 'model__n_estimators': 500, 'model__subsample': 0.8}"
+    "## Retrain on Entire Dataset with Best Parameters\n",
+    "\n",
+    "We then pick the best parameters to be the most common parameters (mode) out of all 5 folds, and then we retrain a model on the entire dataset (no train/test split).\n"
    ]
   },
   {
@@ -661,7 +663,10 @@
    "id": "b7076b4d",
    "metadata": {},
    "source": [
-    "## Generate Predictions on Test Data\n"
+    "## Generate Predictions on Test Data\n",
+    "\n",
+    "\n",
+    "We then produce the output to the submission_xgboost.csv"
    ]
   },
   {
